--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
     "@babel/preset-env": "^7.6.0",
+    "global": "^4.4.0",
     "graphql-yoga": "^1.18.3",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "prisma": "^1.34.10"
   }
 }
