--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
-  "name": "graphql-server",
+  "name": "graphql-basics",
   "version": "1.0.0",
   "description": "",
-  "main": "jest.config.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon --ext js,graphql --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mariobrusarosco/graphql-server.git"
+    "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
+    "get-schema": "graphql get-schema -p prisma-content"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mariobrusarosco/graphql-server/issues"
-  },
-  "homepage": "https://github.com/mariobrusarosco/graphql-server#readme",
   "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
-    "global": "^4.4.0",
-    "graphql-yoga": "^1.18.3",
-    "mongodb": "^3.3.2",
-    "mongoose": "^5.7.1"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "graphql-cli": "^2.16.4",
+    "graphql-yoga": "^1.14.10",
+    "prisma-binding": "^2.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2",
-    "prisma": "^1.34.10"
+    "nodemon": "^1.17.5"
   }
 }
