--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env"
+    "presets": [
+        "env"
+    ],
+    "plugins": [
+        "transform-object-rest-spread"
     ]
-  ]
 }
