--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-# Folders
 node_modules
-dist
-build
-
-# Files
-error.log
-combined.log
-exceptions.log
-crash.log
-
+.DS_Store
 .env
-npm-debug.log
-yarn-error.log
-
-.vscode
-
-cypress/screenshots
-cypress/videos
