--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index"
+    "start": "node src/index",
+    "dev": "nodemon src/index"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.11.0",
