--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rimraf ./dist && tsc",
     "start": "node src/index",
     "dev": "nodemon -r dotenv/config ./src/index.ts",
+    "serve-prod": "node -r dotenv/config ./dist/src/index.js",
     "compile": "tsc --noEmit"
   },
   "dependencies": {
