--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "compile": "tsc --noEmit"
   },
   "dependencies": {
-    "apollo-datasource-rest": "^0.11.0",
+    "@apollo/datasource-rest": "^5.0.1",
+    "@apollo/server": "^4.3.1",
     "apollo-server": "2.19.1",
-    "graphql": "15.4.0"
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
